--- a/app/views/stores/store.html.erb
+++ b/app/views/stores/store.html.erb
@@ -1,6 +1,6 @@
 <% for product in @products %>
   <div class="catalogentry">
-    <img src="<%= product.image_url %>"/>
+    <img style="width: 100px; height: 100px" src="<%= product.image_url %>"/>
     <h3><%= h(product.title) %></h3>
     <%= product.description %>
     <span class="catalogprice"><%= sprintf("$%0.2f", product.price) %></span>
