--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -35,5 +35,6 @@
   </tbody>
 </table>
 <br>
-<%= link_to 'lists', list_admin_path %>
+<%= link_to 'lists', list_admins_path %><br>
+<%= link_to 'display', display_cart_path %>
 
