--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -31,4 +31,5 @@
 </p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<%= link_to 'Back', products_path %> |
+<%= link_to 'display', display_cart_path %>
