--- a/app/views/stores/display_cart.html.erb
+++ b/app/views/stores/display_cart.html.erb
@@ -1,3 +1,16 @@
+<h1>Display Cart</h1>
+<table>
+<%
+for item in @items
+product = item.product
+-%>
+<tr>
+<td><%= item.quantity %></td>
+<td><%= h(product.title) %></td>
+<td align="right"><%= item.unit_price %></td>
+<td align="right"><%= item.unit_price * item.quantity %></td>
+</tr>
+<% end %>
 <div id="cartmenu">
   <ul>
   <li><%= link_to 'Continue shopping', action: :"index" %></li>
@@ -15,7 +28,7 @@
     <td>Each</td>
     <td>Total</td>
   </tr>
-  <% for item in @items product = item.product -%>
+  <% for item in @items product = item.product %>
     <tr>
       <td><%= item.quantity %></td>
       <td><%= h(product.title) %></td>
@@ -27,4 +40,5 @@
     <td colspan="3" align="right"><strong>Total:</strong></td>
     <td id="totalcell"><%= @cart.total_price %></td>
   </tr>
+  <% @page_title = "Your Pragmatic Cart" -%>
 </table>
