--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,7 +1,7 @@
 <table>
   <% for product in @products %>
     <tr>
-      <td><img src="<%= product.image_url %>"/></td>
+      <td><img style="width: 100px; height: 100px" src="<%= product.image_url %>"/></td>
       <td width="450">
         <h3><%=h product.title %></h3>
         <small><%= product.description %></small>
@@ -11,6 +11,9 @@
       </td>
     </tr>
     <tr><td colspan="2"><hr/></td></tr>
+  <% end %>
+  <% if flash[:notice] %>
+    <div id="notice"><%= flash[:notice] %></div>
   <% end %>
 </table>
 <br>
