--- a/app/views/admins/new.html.erb
+++ b/app/views/admins/new.html.erb
@@ -3,4 +3,4 @@
 <%= render_partial "form" %>
 <%= submit_tag "Create" %>
 <%= end_form_tag %>
-<%= link_to ' Back ' , list %>
+<%= link_to ' Back ' , lists  %>
