--- a/app/views/stores/checkout.html.erb
+++ b/app/views/stores/checkout.html.erb
@@ -1,29 +1,38 @@
 <% @page_title = "Checkout" -%>
 <%= start_form_tag(:action => "save_order") %>
 <table>
-<tr>
-<td>Name:</td>
-<td><%= text_field("order", "name", "size" => 40 ) %></td>
-</tr>
-<tr>
-<td>EMail:</td>
-<td><%= text_field("order", "email", "size" => 40 ) %></td>
-</tr>
-<tr valign="top">
-<td>Address:</td>
-<td><%= text_area("order", "address", "cols" => 40, "rows" => 5) %></td>
-</tr>
-<tr>
-<td>Pay using:</td>
-<td><%=
-options = [["Select a payment option", ""]] + Order::PAYMENT_TYPES
-select("order", "pay_type", options)
-%></td>
-</tr>
-<tr>
-<td></td>
-<td><%= submit_tag(" CHECKOUT ") %></td>
-</tr>
+  <tr>
+    <td>Name:</td>
+    <td><%= text_field("order", "name", "size" => 40 ) %></td>
+  </tr>
+  <tr>
+    <td>EMail:</td>
+    <td><%= text_field("order", "email", "size" => 40 ) %></td>
+  </tr>
+  <tr valign="top">
+    <td>Address:</td>
+    <td><%= text_area("order", "address", "cols" => 40, "rows" => 5) %></td>
+  </tr>
+  <tr>
+    <td>Pay using:</td>
+    <td><%=
+    options = [["Select a payment option", ""]] + Order::PAYMENT_TYPES
+    select("order", "pay_type", options)
+    %></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td><%= submit_tag(" CHECKOUT ") %></td>
+  </tr>
 </table>
 <%= end_form_tag %>
+<br>
 <%= link_to 'back',display_cart_path %>
+<%= link_to ' Continue shopping ' , continue_shopping %>
+<% unless params[:context] == :checkout %><br>
+  <%= link_to ' Empty cart ' ,empty_cart %><br>
+  <%= link_to ' Checkout ' ,checkout %>
+<% end %>
+<%= error_messages_for(:order) %><br>
+<%= render_component(action: :"display_cart", context: :"display_cart") %><br>
+<h3>Please enter your details below</h3>
